Fix: Table width overflow

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -111,6 +111,8 @@ table {
   border-collapse: collapse;
   margin-bottom: 30px;
   width: 560px; /*#100%*/
+  overflow-x: auto;
+  display: block;
 }
 
 table, th, td {
